fix block out of bounds 3 time

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,4 +5,5 @@
 html {
   user-select: none;
   touch-action: none;
+  user-zoom: none;
 }
